--- a/app/templates/audiodoc.html
+++ b/app/templates/audiodoc.html
@@ -318,7 +318,14 @@
   </div>
   </header>
 
+
   <section id="episodes" >
+
+<!-- <div class="">
+<iframe width="100%" height="700" src="https://www.youtube.com/embed/3fK5Vlyi9Yc" frameborder="0" allowfullscreen></iframe>
+</div> -->
+
+
     <div class="container image_credits">
       <div class="row ">
         <p>
@@ -343,29 +350,12 @@
         <div id="audioplayer_TI_box" style="display:none">
           {{audiodocs[0].topic_image_box}}
         </div>
-        <div id="switching_audioplayers" class="col-lg-12">
-          <!-- <audio controls id="author" >
-            <source src="{{audiodocs[0].audio_mp3}}" type="audio/mpeg">
-            Your browser does not support the audio element.
-          </audio> -->
-
-          <!-- <div id="circular_container">
-          <canvas id="circular_progress" width="320" height="320"></canvas>
-          <div id="circular_player">
-            <audio id="circular_audio">
-              <source src="{{audiodocs[0].audio_mp3}}" type="audio/mpeg" codecs="mp3"></source>
-            </audio>
-            <img src="{{ audiodocs[0].topic_image_box }}">
-            <div class="circular_cover">
-              <div class="circular_controls">
-                <button id="play-pause" title="Play" onclick="togglePlayPause()"><i class="fa fa-play fa-3x"></i></button>
-                <div id="remaining"></div>
-              </div>
-            </div>
-          </div>
-          </div> -->
-        </div>
+        <div id="switching_audioplayers" class="col-lg-12"></div>
+        <!-- <div style="width:75%; margin:0 auto; padding-bottom:50px; padding-top:20px;">
+          <iframe width="854" height="480" src="https://www.youtube.com/embed/3fK5Vlyi9Yc" frameborder="0" allowfullscreen></iframe>
+        </div> -->
       </div>
+
 
       <div class="row">
         <div class="col-lg-12">
