--- a/app/static/css/homepage_redesign.css
+++ b/app/static/css/homepage_redesign.css
@@ -31,7 +31,7 @@ browser for some reason.. */
   display: none;
 }
 body{background-color: #f8f8f8}
-.homepage_overlay:hover > .homepage_hidden_info{
+.homepage_box_episode:hover > div > .homepage_hidden_info{
   display:inline;
 }
 /* homepage boxes: rows and column styling (to override bootstrap) */
