--- a/app/static/css/archive_page.css
+++ b/app/static/css/archive_page.css
@@ -123,7 +123,7 @@ body{
 }
 .archive_image_padding{
   padding-bottom: 20px;
-  background-color: white;
+  background-color: #f5f5f5;
 }
 /* darken the episode images */
 .archive_image_element {
