--- a/app/templates/knowitwall_redesign.html
+++ b/app/templates/knowitwall_redesign.html
@@ -327,7 +327,7 @@
 
 
 
-  <header style="background:linear-gradient(rgba(255, 255, 255, 0.3),rgba(255, 255, 255, 0.3)), url('{{ audiodocs[0].topic_image }}'); background-size:cover; background-position: 0px 77px;">
+  <!-- <header style="background:linear-gradient(rgba(255, 255, 255, 0.3),rgba(255, 255, 255, 0.3)), url('{{ audiodocs[0].topic_image }}'); background-size:cover; background-position: 0px 77px;">
     <div class="container">
       <div class="row">
 
@@ -351,29 +351,11 @@
       </div>
     </div>
   </div>
-  </header>
-  <section class="success" id="about">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 text-center">
-          <div id="about-left">
-          <h2> What are we about?</h2>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="vertical-line">
-          <p class = 'justify'>Know it Wall is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.</p>
-          <br>
-          <p class = 'justify'>Right now you can read and listen to our episodes, but soon you'll be able to watch them too. From <i>Stegosaurus</i> to Shakespeare, protons to pandemics, there’s no limit to what you could encounter!</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+  </header> -->
 
-    <section id="episodes">
+
+    <section id="episodes" style="padding-top:80px; border-radius:6px;">
     <div class="episodes_container">
-
       <div class="row homepage_box_row">
         {% for elem in audiodocs[1:3] %}
           <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col">
@@ -434,8 +416,78 @@
         {% endfor %}
       </div>
 
+      <section class="success" id="about" style="margin-top:12px;">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 text-center">
+              <div id="about-left">
+              <h2> What are we about?</h2>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="vertical-line">
+              <p class = 'justify'>Know it Wall is a place for inquisitive minds. From sciences to arts, let world-class researchers excite your curiosity.</p>
+              <br>
+              <p class = 'justify'>Right now you can read and listen to our episodes, but soon you'll be able to watch them too. From <i>Stegosaurus</i> to Shakespeare, protons to pandemics, there’s no limit to what you could encounter!</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
       <div class="row homepage_box_row">
         {% for elem in audiodocs[5:7] %}
+          <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col">
+            <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
+              <div class="homepage_overlay">
+               <a a href="episodes/{{elem.url}}" target="_blank" class="">
+                 <p class="box_episode_title">
+                   {{elem.topic_name | safe}}
+                 </p>
+               </a>
+               <p class="homepage_box_by-in">
+                 <i>by</i> <a href="episodes/{{elem.url}}#episodes" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
+               </p>
+             <div class="homepage_hidden_info">
+               <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
+               <div class="label_wrapper audio_label_wrapper">
+                 <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
+               </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+
+      <div class="row homepage_box_row">
+        {% for elem in audiodocs[7:9] %}
+          <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col">
+            <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
+              <div class="homepage_overlay">
+               <a a href="episodes/{{elem.url}}" target="_blank" class="">
+                 <p class="box_episode_title">
+                   {{elem.topic_name | safe}}
+                 </p>
+               </a>
+               <p class="homepage_box_by-in">
+                 <i>by</i> <a href="episodes/{{elem.url}}#episodes" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
+               </p>
+             <div class="homepage_hidden_info">
+               <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
+               <div class="label_wrapper audio_label_wrapper">
+                 <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
+               </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+
+      <div class="row homepage_box_row">
+        {% for elem in audiodocs[9:11] %}
           <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col">
             <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
               <div class="homepage_overlay">
@@ -462,11 +514,12 @@
 
 
 
-
     </div>
       </div> <!-- end of class 'overflow' -->
 
     </section>
+
+
   <!-- Contribute Section -->
   <section id="contribute">
     <div class="container">
