--- a/app/templates/knowitwall_redesign.html
+++ b/app/templates/knowitwall_redesign.html
@@ -416,7 +416,7 @@
         {% endfor %}
       </div>
 
-      <section class="success" id="about" style="margin-top:12px;">
+      <section class="success" id="about" style="margin-top:12px; border-radius:6px;">
         <div class="container">
           <div class="row">
             <div class="col-md-6 text-center">
