--- a/app/static/css/archive_page.css
+++ b/app/static/css/archive_page.css
@@ -298,3 +298,9 @@ footer .footer-info{
 .mobile_filter_wrapper{
   background-color:rgba(255,255,255,0.0);
 }
+
+
+.episodes_container{
+  padding-left: 21px;
+  padding-right: 21px;
+}
