--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -310,8 +310,8 @@
         </div>
       </div>
     </div> -->
-
-    <div class="episodes_container">
+    <div class="container" style="width:100%; margin-left:0px;margin-right:0px;padding-left:100px;padding-right:100px;">
+    <div class="episodes_container" style="border:1px solid #bdbdbd;background-color:white;border-radius:6px">
 
 
 <!-- VERSION 1: 3 boxes per row. Not good -->
@@ -816,7 +816,7 @@
           </div>
           {% endfor %}
         </div>
-
+</div>
 
   <!-- </div> -->
 </section>
