--- a/app/templates/archive_page.html
+++ b/app/templates/archive_page.html
@@ -25,15 +25,55 @@
 
 
   <!-- TEST: bootstrap toggle -->
-    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+    <!-- <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet"> -->
   <link href="/static/css/archive_page.css" rel="stylesheet">
   <!-- HACK: just attached homepage_redesign.css to get the box stylings -->
   <link href="/static/css/homepage_redesign.css" rel="stylesheet">
-
+<script src='/static/js/masonry.pkgd.min.js'></script>
   <!-- Custom Fonts -->
   <link href="/static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
-  <link href="http://fonts.googleapis.com/css?family=Lato:100,300,300italic,400,400italic" rel="stylesheet" type="text/css">
+  <!-- <link href='http://fonts.googleapis.com/css?family=PT+Serif' rel='stylesheet' type='text/css'>
+  <link href="http://fonts.googleapis.com/css?family=Lato:100,300,300italic,400,400italic" rel="stylesheet" type="text/css"> -->
+
+
+
+
+
+  <style>
+  /** {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  }*/
+
+  .item {
+  width:  50px;
+  height: 50px;
+  float: left;
+  background: #2296DD;
+  border: 2px solid #333;
+  margin-bottom: 20px;
+  }
+
+  .item.thumbnail {
+  width:  100px;
+  height: 100px;
+  background: #cfcfcf
+  }
+
+  .item.medium {
+  width:  150px;
+  height: 50px;
+  background: #A6E392
+  }
+
+  .item.large {
+  width:  200px;
+  height: 100px;
+  background: #D092E3
+  }
+  </style>
+
 
 </head>
 
@@ -279,6 +319,8 @@
 
 <!-- Archive -->
 <section>
+
+  <!-- MOBILE STUFF! DON'T DELETE! -->
   <!-- <div class="container"> -->
 
     <!-- <div class="row archive_row">
@@ -311,261 +353,36 @@
       </div>
     </div> -->
     <div class="container" style="width:100%; margin-left:0px;margin-right:0px;padding-left:100px;padding-right:100px;">
-    <div class="episodes_container" style="border:1px solid #bdbdbd;background-color:white;border-radius:6px">
+      <div class="episodes_container" style="border:1px solid #bdbdbd;background-color:white;border-radius:6px">
 
+        <!-- <div id='masonry'>
+          <div class="item thumbnail"></div>
+          <div class="item thumbnail"></div>
+          <div class="item thumbnail"></div>
+          <div class="item thumbnail"></div>
+          <div class="item thumbnail"></div>
+          <div class="item thumbnail"></div>
+          <div class="item thumbnail"></div>
+          <div class="item thumbnail"></div>
+          <div class="item thumbnail"></div>
+          <div class="item thumbnail"></div>
+          <div class="item thumbnail"></div>
+          <div class="item thumbnail"></div>
+          <div class="item thumbnail"></div>
+          <div class="item thumbnail"></div>
+          <div class="item thumbnail"></div>
+          <div class="item thumbnail"></div>
+          <div class="item thumbnail"></div>
+          <div class="item thumbnail"></div>
+          <div class="item thumbnail"></div>
+          <div class="item thumbnail"></div>
+        </div> -->
 
-<!-- VERSION 1: 3 boxes per row. Not good -->
-      <!-- <div class="row homepage_box_row">
-        {% for elem in audiodocs[0:3] %}
-          <div class="col-md-4 homepage_box_col">
-            <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
-              <div class="homepage_overlay">
-               <a a href="episodes/{{elem.url}}" target="_blank" class="">
-                 <p class="box_episode_title">
-                   {{elem.topic_name | safe}}
-                 </p>
-               </a>
-               <p class="homepage_box_by-in">
-                 <i>by</i> <a href="episodes/{{elem.url}}#episodes" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
-               </p>
-             <div class="homepage_hidden_info">
-               <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-               <div class="label_wrapper audio_label_wrapper">
-                 <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
-               </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-      </div>
-      <div class="row homepage_box_row">
-        {% for elem in audiodocs[3:6] %}
-          <div class="col-md-4 homepage_box_col">
-            <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
-              <div class="homepage_overlay">
-               <a a href="episodes/{{elem.url}}" target="_blank" class="">
-                 <p class="box_episode_title">
-                   {{elem.topic_name | safe}}
-                 </p>
-               </a>
-               <p class="homepage_box_by-in">
-                 <i>by</i> <a href="episodes/{{elem.url}}#episodes" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
-               </p>
-             <div class="homepage_hidden_info">
-               <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-               <div class="label_wrapper audio_label_wrapper">
-                 <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
-               </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-      </div>
-      <div class="row homepage_box_row">
-        {% for elem in audiodocs[6:9] %}
-          <div class="col-md-4 homepage_box_col">
-            <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
-              <div class="homepage_overlay">
-               <a a href="episodes/{{elem.url}}" target="_blank" class="">
-                 <p class="box_episode_title">
-                   {{elem.topic_name | safe}}
-                 </p>
-               </a>
-               <p class="homepage_box_by-in">
-                 <i>by</i> <a href="episodes/{{elem.url}}#episodes" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
-               </p>
-             <div class="homepage_hidden_info">
-               <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-               <div class="label_wrapper audio_label_wrapper">
-                 <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
-               </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-      </div>
-      <div class="row homepage_box_row">
-        {% for elem in audiodocs[9:12] %}
-          <div class="col-md-4 homepage_box_col">
-            <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
-              <div class="homepage_overlay">
-               <a a href="episodes/{{elem.url}}" target="_blank" class="">
-                 <p class="box_episode_title">
-                   {{elem.topic_name | safe}}
-                 </p>
-               </a>
-               <p class="homepage_box_by-in">
-                 <i>by</i> <a href="episodes/{{elem.url}}#episodes" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
-               </p>
-             <div class="homepage_hidden_info">
-               <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-               <div class="label_wrapper audio_label_wrapper">
-                 <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
-               </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-      </div> -->
+<!-- VERSION 3: only rows of 2 -->
 
-
-<!-- VERSION 2: alternate 2 and 3 boxes per row -->
-      <!-- <div class="row homepage_box_row">
-        {% for elem in audiodocs[0:2] %}
-          <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col">
-            <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
-              <div class="homepage_overlay">
-               <a a href="episodes/{{elem.url}}" target="_blank" class="">
-                 <p class="box_episode_title">
-                   {{elem.topic_name | safe}}
-                 </p>
-               </a>
-               <p class="homepage_box_by-in">
-                 <i>by</i> <a href="episodes/{{elem.url}}#episodes" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
-               </p>
-             <div class="homepage_hidden_info">
-               <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-               <div class="label_wrapper audio_label_wrapper">
-                 <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
-               </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-      </div>
-
-      <div class="row homepage_box_row">
-        {% for elem in audiodocs[2:5] %}
-          <div class="col-md-4 homepage_box_col">
-            <div style="background:url('{{elem.topic_image}}'); background-size:cover;height:450px;" class='homepage_box_episode'>
-              <div class="homepage_overlay">
-               <a a href="episodes/{{elem.url}}" target="_blank" class="">
-                 <p class="box_episode_title" style="margin-top:80px;">
-                   {{elem.topic_name | safe}}
-                 </p>
-               </a>
-               <p class="homepage_box_by-in">
-                 <i>by</i> <a href="episodes/{{elem.url}}#episodes" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
-               </p>
-             <div class="homepage_hidden_info">
-               <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-               <div class="label_wrapper audio_label_wrapper">
-                 <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
-               </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-      </div>
-
-      <div class="row homepage_box_row">
-        {% for elem in audiodocs[5:7] %}
-          <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col">
-            <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
-              <div class="homepage_overlay">
-               <a a href="episodes/{{elem.url}}" target="_blank" class="">
-                 <p class="box_episode_title">
-                   {{elem.topic_name | safe}}
-                 </p>
-               </a>
-               <p class="homepage_box_by-in">
-                 <i>by</i> <a href="episodes/{{elem.url}}#episodes" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
-               </p>
-             <div class="homepage_hidden_info">
-               <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-               <div class="label_wrapper audio_label_wrapper">
-                 <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
-               </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-      </div>
-
-      <div class="row homepage_box_row">
-        {% for elem in audiodocs[7:10] %}
-          <div class="col-md-4 homepage_box_col">
-            <div style="background:url('{{elem.topic_image}}'); background-size:cover;height:450px;" class='homepage_box_episode'>
-              <div class="homepage_overlay">
-               <a a href="episodes/{{elem.url}}" target="_blank" class="">
-                 <p class="box_episode_title" style="margin-top:80px;">
-                   {{elem.topic_name | safe}}
-                 </p>
-               </a>
-               <p class="homepage_box_by-in">
-                 <i>by</i> <a href="episodes/{{elem.url}}#episodes" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
-               </p>
-             <div class="homepage_hidden_info">
-               <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-               <div class="label_wrapper audio_label_wrapper">
-                 <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
-               </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-      </div>
 
         <div class="row homepage_box_row">
-          {% for elem in audiodocs[10:12] %}
-            <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col">
-              <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
-                <div class="homepage_overlay">
-                 <a a href="episodes/{{elem.url}}" target="_blank" class="">
-                   <p class="box_episode_title">
-                     {{elem.topic_name | safe}}
-                   </p>
-                 </a>
-                 <p class="homepage_box_by-in">
-                   <i>by</i> <a href="episodes/{{elem.url}}#episodes" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
-                 </p>
-               <div class="homepage_hidden_info">
-                 <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-                 <div class="label_wrapper audio_label_wrapper">
-                   <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
-                 </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          {% endfor %}
-        </div>
-
-        <div class="row homepage_box_row">
-          {% for elem in audiodocs[12:15] %}
-            <div class="col-md-4 homepage_box_col">
-              <div style="background:url('{{elem.topic_image}}'); background-size:cover;height:450px;" class='homepage_box_episode'>
-                <div class="homepage_overlay">
-                 <a a href="episodes/{{elem.url}}" target="_blank" class="">
-                   <p class="box_episode_title" style="margin-top:80px;">
-                     {{elem.topic_name | safe}}
-                   </p>
-                 </a>
-                 <p class="homepage_box_by-in">
-                   <i>by</i> <a href="episodes/{{elem.url}}#episodes" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
-                 </p>
-               <div class="homepage_hidden_info">
-                 <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-                 <div class="label_wrapper audio_label_wrapper">
-                   <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
-                 </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          {% endfor %}
-        </div>
-
-        <div class="row homepage_box_row">
-          {% for elem in audiodocs[15:17] %}
+          {% for elem in audiodocs[2:4] %}
             <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col">
               <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
                 <div class="homepage_overlay">
@@ -589,34 +406,6 @@
           {% endfor %}
         </div>
 
-        <div class="row homepage_box_row">
-          {% for elem in audiodocs[17:18] %}
-            <div class="col-md-4 homepage_box_col">
-              <div style="background:url('{{elem.topic_image}}'); background-size:cover;height:450px;" class='homepage_box_episode'>
-                <div class="homepage_overlay">
-                 <a a href="episodes/{{elem.url}}" target="_blank" class="">
-                   <p class="box_episode_title" style="margin-top:80px;">
-                     {{elem.topic_name | safe}}
-                   </p>
-                 </a>
-                 <p class="homepage_box_by-in">
-                   <i>by</i> <a href="episodes/{{elem.url}}#episodes" class="highlight">{{elem.author_name | safe}}</a> <i>in</i> <span class="highlight">{{elem.discipline}} </span>
-                 </p>
-               <div class="homepage_hidden_info">
-                 <p class="homepage_box_abstract">{{elem.topic_description | safe}}</p>
-                 <div class="label_wrapper audio_label_wrapper">
-                   <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
-                 </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          {% endfor %}
-        </div> -->
-
-
-
-<!-- VERSION 3: only rows of 2 -->
         <div class="row homepage_box_row">
           {% for elem in audiodocs[0:2] %}
             <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col">
@@ -816,9 +605,9 @@
           </div>
           {% endfor %}
         </div>
-</div>
 
-  <!-- </div> -->
+      </div>
+    </div>
 </section>
 
 {% endblock %}
@@ -853,8 +642,18 @@
 <script src="/static/js/knowitwall.js"></script>
 <script src="/static/js/archive_filter.js"></script>
 
+<!-- Masonry -->
+
+<script>
+var container = document.querySelector('#masonry');
+var masonry = new Masonry(container, {
+    columnWidth: 200,
+    itemSelector: '.item'
+  });
+</script>
+
 <!-- TEST: bootstrap toggle -->
-<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+<!-- <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script> -->
 
 </body>
 {% endblock %}
