--- a/app/templates/audiodoc_annotations.html
+++ b/app/templates/audiodoc_annotations.html
@@ -297,8 +297,8 @@
     </div>
   </nav>
 
-  <header class="audiodoc_header" style="background: url('{{ audiodocs[0].topic_image }}') fixed; background-repeat: no-repeat; background-size:cover;">
-    <div class="container">
+  <header id="header_no_player" class="audiodoc_header" style="background: url('{{ audiodocs[0].topic_image }}') fixed; background-repeat: no-repeat; background-size:cover; position:relative;">
+    <div class="container" >
       <div class="row">
         <div class="col-lg-10 col-lg-offset-1 text-center">
           <div class="episode-title">
@@ -311,15 +311,23 @@
 
       </div>
     </div>
-    <div class="row arrow_row">
-      <div class="col-lg-10 col-lg-offset-1 text-center page-scroll" style="color: black; font-size:125%">
-        <a class="arrow-wrap a_arrow" href="#episodes">
-        <span class="arrow"></span>
-        </a>
+      <div class="row arrow_row">
+        <div class="col-lg-10 col-lg-offset-1 text-center page-scroll" style="color: black; font-size:125%">
+          <a class="arrow-wrap a_arrow" href="#episodes">
+          <span class="arrow"></span>
+          </a>
+        </div>
       </div>
     </div>
-  </div>
   </header>
+
+
+
+<header style="display:none;" id="header_player">
+  <div style="padding-left: 100px;padding-right:100px; background-color:black;position:relative;top:45px; height: 700px;">
+<iframe src="https://www.youtube.com/embed/3fK5Vlyi9Yc?autoplay=1" style=" width:100%; height:100%;" frameborder="0" allowfullscreen></iframe>
+  </div>
+</header>
 
   <section id="episodes" >
     <div class="container image_credits">
@@ -490,6 +498,14 @@ jQuery(function ($) {
                }
                );
                });
+</script>
+
+<!-- to play header on click -->
+<script type="text/javascript">
+$('#header_no_player').click(function(){
+  $('#header_no_player').css('display','none');
+  $('#header_player').css('display','block');
+});
 </script>
 
 
