--- a/app/static/css/KiW_redux_annotations.css
+++ b/app/static/css/KiW_redux_annotations.css
@@ -556,7 +556,7 @@ text-align: left;
 
 .transcript{
   padding: 40px;
-  text-align: justify;
+  /*text-align: justify;*/
   background-color: white;
 }
 @media(min-width: 768px){
