--- a/app/templates/knowitwall_redesign.html
+++ b/app/templates/knowitwall_redesign.html
@@ -327,45 +327,14 @@
 
 
 
-  <!-- <header style="background:linear-gradient(rgba(255, 255, 255, 0.3),rgba(255, 255, 255, 0.3)), url('{{ audiodocs[0].topic_image }}'); background-size:cover; background-position: 0px 77px;">
-    <div class="container">
-      <div class="row">
 
-        <div class="label_wrapper_landing_page audio_label_wrapper_landing_page">
-          <i class="fa fa-volume-up audio-film_label_landing_page" aria-hidden="true" style="font-size:20px;"></i>
-        </div>
-        <div class="label_wrapper_landing_page film_label_wrapper_landing_page">
-          <i class="fa fa-film audio-film_label_landing_page" aria-hidden="true"  style="font-size:20px;"></i>
-        </div>
-        <div class="btn btn-secondary latest_landing_page" style="">LATEST EPISODE</div>
-
-        <div class="col-lg-10 col-lg-offset-1 text-center">
-          <a href="episodes/{{audiodocs[0].url}}" class="episode-title">
-            {{audiodocs[0].topic_name | safe}}
-          </a>
-        </div>
-
-        <div class="col-lg-10 col-lg-offset-1 text-center page-scroll" style="color: black; font-size:125%">
-           <i style="color: {{audiodocs[0].by_in_colour}}">by</i> <a href="episodes/{{audiodocs[0].url}}#author" class="highlight">{{audiodocs[0].author_name | safe}}</a> <i style="color: {{audiodocs[0].by_in_colour}}">in</i> <span class="highlight">{{audiodocs[0].discipline}} </span>
-
-      </div>
-    </div>
-  </div>
-  </header> -->
-
-
-  <section id="episodes" style="padding-top:80px; border-radius:6px;">
+  <section class="episode_section_1">
     <div class="episodes_container">
       <div class="row homepage_box_row">
         {% for elem in audiodocs[1:2] %}
-          <div class="col-md-{{loop.cycle('12','5')}} homepage_box_col">
+          <div class="col-md-12 homepage_box_col homepage_box_first_col">
             <div style="background:url('{{elem.topic_image}}'); background-size:cover; height:500px" class='homepage_box_episode'>
               <div class="homepage_overlay">
-                <!-- homepage_hidden_info -->
-                  <!-- <div class="label_wrapper audio_label_wrapper">
-                    <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
-                  </div> -->
-
                <a a href="episodes/{{elem.url}}" target="_blank" class="">
                  <p class="box_episode_title" style="margin-top:112px;font-size:34px">
                    {{elem.topic_name | safe}}
@@ -380,9 +349,11 @@
                <div class="label_wrapper_landing_page audio_label_wrapper_landing_page">
                  <i class="fa fa-volume-up audio-film_label_landing_page" aria-hidden="true" style="font-size:18px;"></i>
                </div>
+               {% if elem.embed_video %}
                <div class="label_wrapper_landing_page film_label_wrapper_landing_page">
                  <i class="fa fa-film audio-film_label_landing_page" aria-hidden="true" style="font-size:18px;"></i>
                </div>
+               {% endif %}
                <div class="btn btn-secondary latest_landing_page" style="">LATEST EPISODE</div>
               </div>
             </div>
@@ -393,7 +364,7 @@
 
       <div class="row homepage_box_row">
         {% for elem in audiodocs[3:5] %}
-          <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col">
+          <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col {{loop.cycle('', 'homepage_box_col_2')}}">
             <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
               <div class="homepage_overlay">
                <a a href="episodes/{{elem.url}}" target="_blank" class="">
@@ -410,9 +381,11 @@
                <div class="label_wrapper audio_label_wrapper">
                  <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
                </div>
+               {% if elem.embed_video %}
                <div class="label_wrapper film_label_wrapper">
                  <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
                </div>
+               {% endif %}
               </div>
             </div>
           </div>
@@ -420,7 +393,9 @@
         {% endfor %}
       </div>
 
-      <section class="success" id="about" style="margin-top:12px; border-radius:6px;">
+    </div> <!-- end of episode_container -->
+  </section>
+      <section class="success" id="about">
         <div class="container">
           <div class="row">
             <div class="col-md-6 text-center">
@@ -439,10 +414,12 @@
         </div>
       </section>
 
+  <section class="episode_section_2" style="">
+    <div class="episodes_container">
 
       <div class="row homepage_box_row">
         {% for elem in audiodocs[5:7] %}
-          <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col">
+          <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col {{loop.cycle('', 'homepage_box_col_2')}}">
             <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
               <div class="homepage_overlay">
                <a a href="episodes/{{elem.url}}" target="_blank" class="">
@@ -458,6 +435,11 @@
                <div class="label_wrapper audio_label_wrapper">
                  <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
                </div>
+               {% if elem.embed_video %}
+               <div class="label_wrapper film_label_wrapper">
+                 <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
+               </div>
+               {% endif %}
               </div>
             </div>
           </div>
@@ -467,7 +449,7 @@
 
       <div class="row homepage_box_row">
         {% for elem in audiodocs[7:9] %}
-          <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col">
+          <div class="col-md-{{loop.cycle('5','7')}} homepage_box_col {{loop.cycle('', 'homepage_box_col_2')}}">
             <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
               <div class="homepage_overlay">
                <a a href="episodes/{{elem.url}}" target="_blank" class="">
@@ -483,6 +465,11 @@
                <div class="label_wrapper audio_label_wrapper">
                  <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
                </div>
+               {% if elem.embed_video %}
+               <div class="label_wrapper film_label_wrapper">
+                 <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
+               </div>
+               {% endif %}
               </div>
             </div>
           </div>
@@ -492,7 +479,7 @@
 
       <div class="row homepage_box_row">
         {% for elem in audiodocs[9:11] %}
-          <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col">
+          <div class="col-md-{{loop.cycle('7','5')}} homepage_box_col {{loop.cycle('', 'homepage_box_col_2')}}">
             <div style="background:url('{{elem.topic_image}}'); background-size:cover;" class='homepage_box_episode'>
               <div class="homepage_overlay">
                <a a href="episodes/{{elem.url}}" target="_blank" class="">
@@ -508,6 +495,11 @@
                <div class="label_wrapper audio_label_wrapper">
                  <i class="fa fa-volume-up audio-film_label" aria-hidden="true"></i>
                </div>
+               {% if elem.embed_video %}
+               <div class="label_wrapper film_label_wrapper">
+                 <i class="fa fa-film audio-film_label" aria-hidden="true"></i>
+               </div>
+               {% endif %}
               </div>
             </div>
           </div>
@@ -515,14 +507,29 @@
         {% endfor %}
       </div>
 
+<!--
+TODO: loop over the 3 rows above using nested loops.
+
+testing:
+{% for elem in [1,2,3] %}
+
+  {% set outer_loop  = loop.index - 1 %}
+  outer loop: {{outer_loop}}
+
+  {% for bige in audiodocs[5 + outer_loop*2: 7 + outer_loop*2] %}
+
+episode url: {{bige.url}}
+
+<div class="">
+  number: {{outer_loop*2 + 5}}
+</div>
+  {% endfor %}
+{% endfor %} -->
 
 
-
-    </div>
-      </div> <!-- end of class 'overflow' -->
-
+      </div> <!-- end of episode_container -->
     </section>
-
+</div> <!-- end of class 'overflow' -->
 
   <!-- Contribute Section -->
   <section id="contribute">
